force-app/main/default/objects/Self_Assessment_Template__c/Self_Assessment_Template__c.object-meta.xml
<CustomObject>
    <description>A set of questions used in self-assessments</description>
    <label>Self-Assessment Template</label>
    <nameField>
        <label>Self-Assessment Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Self-Assessment Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>