force-app/main/default/objects/Self_Assessment_Template__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>An internal description of the template</description>
    <inlineHelpText>An internal description of the template</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>