force-app/main/default/objects/Self_Assessment_Template__c/fields/Intro_Message__c.field-meta.xml
<CustomField>
    <fullName>Intro_Message__c</fullName>
    <description>A public message to display to the user before starting self-assessments from this template</description>
    <inlineHelpText>A public message to display to the user before starting self-assessments from this template</inlineHelpText>
    <label>Intro Message</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>