force-app/main/default/objects/Self_Assessment_Template__c/fields/Thank_You_Message__c.field-meta.xml
<CustomField>
    <fullName>Thank_You_Message__c</fullName>
    <description>The message to display to users after a self-assessment from this template is completed</description>
    <inlineHelpText>The message to display to users after a self-assessment from this template is completed</inlineHelpText>
    <label>Thank You Message</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>